--- a/frontend/images_list.html
+++ b/frontend/images_list.html
@@ -15,7 +15,7 @@
 
         <nav aria-label="breadcrumb" >
           <ol class="breadcrumb" style="background-color: midnightblue" >
-            <li class="breadcrumb-item" ><a href="#" style="color: white">Home</a></li>
+            <li class="breadcrumb-item" ><a href="home.html" style="color: white">Home</a></li>
           </ol>
         </nav>
 
@@ -24,38 +24,6 @@
         <div class="card-deck" id="card-deck" >
             <div class="row" id="row0">
 
-                <!-- In alternativa alle CARD righe di colonne di <a>
-                    di classe thumbnail con img
-
-                     <div class="row">
-                      <div class="col-xs-6 col-md-3">
-                        <a href="#" class="thumbnail">
-                          <img src="..." alt="...">
-                        </a>
-                      </div>
-                      ...
-                    </div>
-                 -->
-
-                <!--
-                <div class="card" style="width:18rem;" >
-
-                    <a href={{url}} >
-                    <img src ={{image.url}} alt="{{image.name}}" class="card-img-top"/>
-                    </a>
-
-
-                    <div class="card-body">
-
-                        <h5 class="card-title">id: </h5>
-                        <p class="card-text">Immagine:   </p>
-
-                    </div>
-
-                </div>
-
-            </div>
-            <div class="row" style="margin-top: 3rem;"> -->
             </div>
 
         </div>
