--- a/frontend/edit_task.html
+++ b/frontend/edit_task.html
@@ -26,23 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#" style="color: white">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#" style="color: white" id="home">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                      <li class="nav-item active">
                         <a class="nav-link" href="#" style="color: white">Profile </a>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" style="color: white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Actions
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" style="color: midnightblue" href="#">Create or Edit Tasks</a>
-                            <a class="dropdown-item" style="color: midnightblue" href="#">Take Results</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" style="color: midnightblue" href="#">Something else here</a>
-                        </div>
                     </li>
 
                     <li class="nav-item">
