--- a/frontend/edit_task.html
+++ b/frontend/edit_task.html
@@ -81,6 +81,6 @@
         <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
         <script src="static/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="static/js/home.js"></script>
+        <script type="text/javascript" src="static/js/edit_task.js"></script>
     </body>
 </html>
