--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -74,7 +74,7 @@
 							<div class="input-group-label">
 								<span class="input-group-text">Username</span>
 							</div>
-							<input id='user' type="text" class="form-control" disabled placeholder="username">
+							<input id='user' type="text" class="form-control" readonly placeholder="username">
 
 						</div>
 
@@ -86,12 +86,13 @@
 
 						</div>
 
+							<br /> <br/>
 
 						<div class="input-group form-group">
 							<div class="input-group-label">
 								<span class="input-group-text">Password</span>
 							</div>
-							<input id='psw1' type="password" class="form-control" placeholder="password">
+							<input id='psw1' type="password" class="form-control" placeholder="new password">
 
 						</div>
 
@@ -99,12 +100,11 @@
 							<div class="input-group-label">
 								<span class="input-group-text">Repeat Password</span>
 							</div>
-							<input id='psw2' type="password" class="form-control" placeholder="repeat password">
+							<input id='psw2' type="password" class="form-control" placeholder="repeat new password">
 
 						</div>
 
                         </div>
-						<br>
 						<button onclick="editUser()" class="btn float-right login_btn">Edit</button>
 						<br><br>
 				</div>
